--- a/mai/main.lang
+++ b/mai/main.lang
@@ -1,297 +1,404 @@
 ;Navigation
-Navigation
+संचरण
+
 
 ;Press area
-Press Area
+प्रेस एरिया
+
 
 ;About
-About
+परिचय
+
 
 ;Store
-Store
+स्टोर
+
 
 ;Donate
-Donate
+दान करू
+
 
 ;Support
-Support
+सपोर्ट
+
 
 ;Products
-Products
+उत्पाद
+
 
 ;Add-ons
-Add-ons
+सहयुक्ति
+
 
 ;About Us
-About Us
+हमर परिचय
+
 
 ;Developers
-Developers
+डेवलपर
+
 
 ;Labs
-Labs
+लैब
+
 
 ;skip to Navigation
-skip to Navigation
+संचरण में जाउ
+
 
 ;switch language
-switch language
+भाषा बदलू
+
 
 ;Back to home page
-Back to home page
+मुख पृष्ठ पर जाउ
+
 
 ;About Mozilla
-About Mozilla
+मोजिल्ला परिचय
+
 
 ;Get Involved
-Get Involved
+शामिल होउ
 
-;Partnerships
-Partnerships
 
 ;Licensing
-Licensing
+लाइसेंस
+
 
 ;Careers
-Careers
+नौकरी
+
 
 ;Press Center
-Press Centre
+प्रेस सेंटर
+
 
 ;Contact Us
-Contact Us
+संपर्क करू
+
 
 ;Site contact
-Site contact
+साइटसँ संपर्क
+
 
 ;Other languages:
-Other languages:
+आन भाषासभ:
+
 
 ;%Y-%m-%d
 %d-%m-%Y
 
+
 ;All rights reserved.
-All rights reserved.
+सर्वाधिकार सुरक्षित.
+
 
 ;Legal Notices
-Legal Notices
+कानूनी सूचना
+
 
 ;Privacy Policy
-Privacy Policy
+गोपनीयता नीति
+
 
 ;Visit Mozilla.com
-Visit Mozilla.com
+Mozilla.com देखू
+
 
 ;Visit Mozilla.com (in English)
-Visit Mozilla.com (US site)
+Mozilla.com देखू (अंग्रेजीमे)
+
 
 ;Download Firefox - Free
-Download Firefox - Free
+फायरफाक्स डाउनलोड करू - निःशुल्क
+
 
 ;Release Notes
-Release Notes
+रिलीज नोट्स
+
 
 ;Other Systems and Languages
-Other Systems and Languages
+आन तंत्र आओर भाषा
+
 
 ;Get Firefox
-Get Firefox
+फायरफाक्स पाउ
 
-;Get Firefox 3
-Get Firefox 3
-
-;Get Firefox 3.5
-Get Firefox 3.5
 
 ;Free Download
-Free Download
+निःशुल्क डाउनलोड
+
 
 ;Help us make Firefox even better!
-Help us make Firefox even better!
+फायरफाक्स केँ एकरासँ बेहतर बनाबैमे हमर मदद करू!
+
 
 ;Take a few moments to take a quick survey and share your thoughts with us.
-Take a few moments to take a quick survey and share your thoughts with us.
+एकगोट छोट सन सर्वेक्षण केँ करबामे किछु समय दिअ आओर हमर साथ अपन विचार साझा करू.
 
-;This video brought to you by <a href="%s">Dailymotion</a>, proud supporters of open video.
-This video brought to you by <a href="%s">Dailymotion</a>, proud supporters of open video.
 
 ;Close
-Close
+बन्न करू
+
 
 ;(in English)
-(in English)
+(अंग्रेजीमे)
+
 
 ;Download Now - Free
-Download Now - Free
+अखन डाउनलोड करू - निःशुल्क
+
 
 ;Return to top
-Return to top
+शीर्ष पर वापस जाउ
+
 
 ;You should <a href="http://get.adobe.com/flashplayer/">update Adobe Flash Player</a> right now.
-You should <a href="http://get.adobe.com/flashplayer/">update Adobe Flash Player</a> right now.
+अहाँक <a href="http://get.adobe.com/flashplayer/">एडोब फ्लैश प्लेयर</a> केँ अखन अपडेट कएनाइ चाही.
+
 
 ;Firefox is up to date, but your current version of Flash Player can cause security and stability issues.  Please <a href="http://get.adobe.com/flashplayer/">install the free update</a> as soon as possible.
-Firefox is up to date, but your current version of Flash Player can cause security and stability issues.  Please <a href="http://get.adobe.com/flashplayer/">install the free update</a> as soon as possible.
+फायरफाक्स अद्यतन अछि मुदा फ्लैश प्लेयरक मोजुदा संस्करण सुरक्षा आओर स्थायित्वक कारण बनि सकैत अछि.  कृपया <a href="http://get.adobe.com/flashplayer/">निःशुल्क अद्यतन</a> केँ जल्दसँ जल्द संस्थापित करू.
+
 
 ;Features
-Features
+विशेषता
+
 
 ;Customize
-Customize
+मनपसिन्न बनाउ
+
 
 ;Synchronize
-Synchronize
+सिंक्रोनाइज करू
+
 
 ;Develop for Mobile
-Develop for Mobile
+मोबाइलक लेल डेवलेप करू
+
 
 ;Other Supported Platforms
-Other Supported Platforms
+आन समर्थित प्लैटफार्म
+
 
 ;Other Platforms &amp; Languages
-Other Platforms &amp; Languages
+आन प्लेटफार्म आ भाषासभ
+
 
 ;Choose your location
-Choose your location
+अपन स्थान चुनू
 
-;Send the download link to your phone
-Send the download link to your phone
-
-;We could not send a text message to you. Please make sure your number includes a country code (e.g. +1 555-123-4567) and that you answered the captcha correctly.
-We could not send a text message to you. Please make sure your number includes a country code (e.g. +1 555-123-4567).
-
-;Enter your mobile number and get a text containing a link to download Firefox to your phone.
-Enter your mobile number and get a text containing a link to download Firefox to your phone.
-
-;Get it now on the Nokia N900
-Get it now on the Nokia N900
-
-;Send Text
-Send Text
-
-;Standard text rates apply
-Standard text rates apply
 
 ;Download Firefox directly from your phone
-Download Firefox directly from your phone
+फायरफाक्स केँ सीधे अपन फोनसँ डाउनलोड करू
+
 
 ;Download
-Download
+डाउनलोड करू
 
 
 ;Next
-Next
+आगाँ
+
 
 ;MB
 MB
 
+
 ;MegaBytes
-MegaBytes
+मेगाबाइट
+
 
 ;FAQ
-FAQ
+बेर बेर पूछल जाइबला प्रश्न
+
 
 ;Videos
-Videos
+वीडियो
+
 
 ;Except where otherwise <a href="%s">noted</a>, content on this site is licensed under the <br /><a href="%s">Creative Commons Attribution Share-Alike License v3.0</a> or any later version.
-Except where otherwise <a href="%s">noted</a>, content on this site is licensed under the <br /><a href="%s">Creative Commons Attribution Share-Alike License v3.0</a> or any later version.
+सिवाय ओतए जतए आन <a href="%s">टिप्पणी</a>देल गेल अछि, ई साइटक सामग्री <br /><a href="%s">Creative Commons Attribution Share-Alike Licensev3.0</a> अथवा कोनो पश्चातवर्ती संस्करणक लाइसेंस अंतर्गत अछि.
+
 
 ;Report Trademark Abuse
-Report Trademark Abuse
+ट्रेडमार्क दुरूपयोग रिपोर्ट करू
+
 
 ;Free Upgrade
-Free Upgrade
+निःशुल्क अद्यतन
+
 
 ;Follow us on:
-Follow us on:
+हमरा एतए फालो करू:
+
 
 ;Customize with Add-ons
-Customize with Add-ons
+सहयुक्तिक संग मनपसिन्न करू
+
 
 ;Sync Your Desktop & Mobile
-Sync Your Desktop & Mobile
+अपन डेस्कटाप आ मोबाइल सिंक करू
 
-;New: Crash Protection
-New: Crash Protection
-
-;Continue browsing even when your video or game crashes.
-Continue browsing even when your video or game crashes.
 
 ;Learn More
-Learn More
+आओर जानू
+
 
 ;Watch the video
-Watch the video
+वीडियो देखू
+
 
 ;WebM format
-WebM format
+वेबएम प्रारूप
+
 
 ;Ogg Theora format
-Ogg Theora format
+Ogg थियोरा प्रारूप
+
 
 ;MPEG-4 format
-MPEG-4 format
+एमपीइजी-4 प्रारूप
+
 
 ;Whoops! Be sure to enter a valid email address.
-Whoops! Be sure to enter a valid email address.
+ओफ्फ! कोनो मान्य ईमेल पता देनाइ सुनिश्चित करू.
+
 
 ;Please read the Mozilla Privacy Policy and agree by checking the box.
-Please read the Mozilla Privacy Policy and agree by checking the box.
+कृपया मोजिल्ला गोपनीयता नीति पढ़ू आओर बाक्स केँ चेक कए सहमत होउ.
+
 
 ;Please enter your email address and review the Mozilla Privacy Policy.
-Please enter your email address and review the Mozilla Privacy Policy.
+कृपया अपन ईमेल पता दर्ज करू आओर मोजिल्ला गोपनीयता नीतिक समीक्षा करू.
+
 
 ;Mobile
-Mobile
+मोबाइल
 
-# note: Firefox Updated is the title of the Whatsnew page
+
 ;Firefox Updated
-Firefox Updated
+फायरफाक्स अद्यतनीकृत
 
-# beginning of Firefox 4 promos on the whatsnew page
 
 ;Take a Look at Tomorrow's Web
-Take a Look at Tomorrow's Web
+काल्हिक वेब पर एक नजर दिअ'
 
-;Journey to the Future with Firefox&nbsp;4
-Journey to the Future with Firefox&nbsp;4
+
+;Journey to the Future with Firefox
+फायरफाक्सक संग भविष्यक यात्रा
+
 
 ;Join the Beta Program
-Join the Beta Programme
+बीटा प्रोग्राममे शामिल होउ
 
-;Experience Firefox&nbsp;4
-Experience Firefox&nbsp;4
+
+;Experience Firefox
+फायरफाक्सक अनुभव लिअ'
+
 
 ;The future of the Web is waiting for you!
-The future of the Web is waiting for you!
+वेबक भविष्य अहाँक प्रतीक्षा कए रहल अछि!
+
 
 ;The future of the Web starts now.
-The future of the Web starts now.
+आब सँ वेबक भविष्य आरंभ भए रहल अछि.
+
 
 ;Try Firefox with a fresh look and feel.
-Try Firefox with a fresh look and feel.
+नव रूप-रंगबला फायरफाक्स केँ देखू.
+
 
 ;Experience tomorrow's Web today.
-Experience tomorrow's Web today.
+काल्हिक वेबक आइ अनुभव करू.
 
-;Check out the new look and feel of Firefox&nbsp;4.
-Check out the new look and feel of Firefox&nbsp;4.
+
+;Check out the new look and feel of Firefox.
+फायरफाक्सके नव रूप-रंग केँ हासिल करू.
+
 
 ;Browse the future of the Web.
-Browse the future of the Web.
+भविष्यक वेबकेँ ब्राउज करू.
 
-;See Firefox&nbsp;4 with a new look and feel.
-See Firefox&nbsp;4 with a new look and feel.
+
+;See Firefox with a new look and feel.
+नव रूप-रंग युक्त फायरफाक्स केँ देखू
+
 
 ;Download Beta Now.
-Download Beta Now.
-
-# end of Firefox 4 promos on the whatsnew page
+बीटा केँ आब डाउनलोड करू.
 
 
 ;All Systems & Languages
-All Systems & Languages
+सभटा तंत्र आ भाषा
+
 
 ;View Full Site
-View Full Site
+पूरा साइट देखू
+
+
+;Get Firefox for Android
+एंड्रायडक लेल फायरफाक्स पाउ
+
+
+;Download for <span>Android</span>
+<span>एंड्रायड</span> क लेल डाउनलोड करू
+
+
+;Free from the Android Market
+एंड्रायड बाजार सँ निःशुल्क
+
+
+;Desktop
+डेस्कटाप
+
+
+;Firefox Beta for mobile
+मोबाइलक लेल फायरफाक्स बीटा
+
+
+;Firefox for mobile
+मोबाइलक लेल फायरफाक्स
+
+
+;Email
+ईमेल
+
+
+;Mozilla Firefox. Bringing the modern Web to XP.
+मोजिल्ला फायरफाक्स. आधुनिक वेबक एक्सपी मे आनू.
+
+
+;Super speed
+बहुत तेज
+
+
+;Stunning graphics
+बहुत नीक ग्राफिक
+
+
+;The latest technologies
+नवीनतम प्रौद्योगिकी
+
+
+;You're using an old version of Firefox. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
+अहाँ फायरफाक्सक पुरान संस्करणक उपयोग कए रहल छी. सुरक्षित रहब लेल अपन अपडेट लिअ'! <br/> <a href="%s">निःशुल्क अपडेट डाउनलोड करू</a> नवीनतम फीचर, गति आओर सुरक्षा फिक्सक सँग एकमिनट सँ कम समय मे.
+
+
+;You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
+अहाँक अपग्रेड करबाक जरूरत अछि! एकमिनट सँ कम समय मे सुरक्षित करू. <br/> नव फायरफाक्सक उपयोग कएनाइ आरंभ करू जे ब्राउजिंग आओर मनपसिन्न करबामे सबसँ नीक अछि. <br/>   ई तेज आओर निःशुल्क अछि!
+
+
+;You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
+अहाँ फायरफाक्सक पुरान संस्करणक उपयोग कए रहल छी. <a href="%s">अपन अपडेट</a> सुरक्षित रहबाक लेल लिअ! <br/> नवीवतम फीचर, सुरक्षा उपाय आओर अखनि तकि कए सबसँ तेज फायरफाक्सक संग आनंद लिअ'. एक मिनटसँ कम समय मे फ्री अपग्रेड डाउनलोड करू.
+
+
+;Upgrade now
+अखन अपग्रेड करू
+
+
+;Update now
+अखन अपडेट करू
+
+
