--- a/mai/newsletter.lang
+++ b/mai/newsletter.lang
@@ -1,64 +1,64 @@
 ;Get Monthly News
-Get Monthly News
+महीनाक समाचार पाउ
 
 
 ;Your Email Address
-Your Email Address
+अहाँक ईमेल पता
 
 
 ;Text
-Text
+पाठ
 
 
 ;Available Languages
-Available Languages
+उपलब्ध भाषा
 
 
 ;Select country
-Select country
+देश चुनू
 
 
 ;Whoops! Be sure to enter a valid email address.
-Whoops! Be sure to enter a valid email address.
+ओह! एकटा बैध ईमेल पता दिअ'.
 
 
 ;Please read the Mozilla Privacy Policy and agree by checking the box.
-Please read the Mozilla Privacy Policy and agree by checking the box.
+कृपया मोजिला गोपनीयता नीति पढू आओर पेटी पर चेक कएक सहमति दिअ.
 
 
 ;I agree to the <a href="%s">Privacy Policy</a>
-I agree to the <a href="%s">Privacy Policy</a>
+हम <a href="%s">गोपनीयता नीति</a> सँ सहमत छी.
 
 
 ;Sign me up!
-Sign me up!
+हमरा साइन अप करू!
 
 
 ;We will only send you Mozilla-related information.
-We will only send you Mozilla-related information.
+हमलोकनि अहाँक मोजिलासँ जुड़ल सूचना भेजब.
 
 
 ;Thanks for Subscribing!
-Thanks for Subscribing!
+सदस्यताक लेल धन्यवाद!
 
 
 ;We look forward to soon begin sharing tips &amp; tricks on getting the most out of Firefox, as well as exciting news about Mozilla and how we’re working to create a better Web.
-We look forward to soon begin sharing tips &amp; tricks on getting the most out of Firefox, as well as exciting news about Mozilla and how we’re working to create a better Web.
+फायरफाक्सक सबसँ बेसी लाभ लेबाक लेल संकेत आओर युक्तिक साझा करबाक लेल सोचि रहल छी, साथे मोजिलाक संबंधमे रोचक समाचारक क लेल और कहिना हम नीक वेब बनाए रहल छी.
 
 
 ;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
-Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
+मासिक अपडेटक सदस्यता लिअ' आओर मोजिल्ला समाचारक सँग बनल रहू, जकरा मे सबसँ हालक टिप्स-ट्रिक्स रहए जकरासँ अहाँ फायरफाक्सकेँ सबसँ बेसी फायदा लाए सकी. ई हमरा लेल संपर्क में रहब लेल सबसँ नीक तरीका अछि!
 
 
 ;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
-We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
+हम अहाँक अखन एकटा ईमेल पुष्टिक लेल कएन छी. ईमेलमे पुष्टि लिंक पर क्लिक करू अहाँक ई मेलिंग लिस्टपर सदस्यताक वैध करबाक लेल क्लिक करू.
 
 
 ;Read all about it in our <span>newsletter</span>
-Read all about it in our <span>newsletter</span>
+हमर <span>न्यूजलेटर</span> मे सभचीज हमर बारे मे पढ़ू
 
 
 ;Format
-Format
+प्रारूप
 
 
