l10n: add a dozen necessary strings for newsletter/new page
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@102921 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/fr/newsletter.lang
+++ b/fr/newsletter.lang
@@ -62,5 +62,39 @@ Découvrez notre <span>lettre d'informations</span>
 Format {ok}
 
 
-;Your newsletter subscription has been confirmed.
-Merci de vous abonner à Firefox & Vous. Votre demande a bien été prise en compte.
+;You’re All Set! <span>But Wait, There’s More</span>
+Vous voilà paré&nbsp;! <span>Mais ce n'est pas tout&nbsp;!</span>
+
+
+;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+
+
+;Firefox & You
+Firefox et vous
+
+
+;Our Other Newsletters:
+Nos autres lettres d'informations
+
+
+;Get the latest tips and tricks for getting the most out of your favorite browser.
+Découvrez les derniers trucs et astuces vous permettant de tirer le meilleur parti de votre navigateur.
+
+
+;Firefox Mobile
+Firefox mobile
+
+
+;Learn about the hottest new add-ons and features for Firefox mobile.
+Découvrez les toutes dernières fonctionnalités et extensions destinées à Firefox mobile.
+
+
+;Beta News
+Journal des bêtas
+
+
+;Read about the latest features for Firefox desktop and mobile before the final release.
+Découvrez toutes les nouveautés à venir de Firefox dans ses déclinaisons classque et mobile.
+
+
