--- a/he/newsletter.lang
+++ b/he/newsletter.lang
@@ -25,6 +25,7 @@
 ;Please read the Mozilla Privacy Policy and agree by checking the box.
 נא לקרוא את מדיניות הפרטיות ואשרו אותה באמצעות סימון תיבה זו.
 
+
 ;I agree to the <a href="%s">Privacy Policy</a>
 אני מסכים ל<a href="%s">הצהרת הפרטיות</a>
 
@@ -59,5 +60,41 @@
 
 ;Format
 תבנית
+
+
+;You’re All Set! <span>But Wait, There’s More</span>
+You’re All Set! <span>But Wait, There’s More</span>
+
+
+;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+
+
+;Firefox & You
+Firefox & You
+
+
+;Our Other Newsletters:
+Our Other Newsletters:
+
+
+;Get the latest tips and tricks for getting the most out of your favorite browser.
+Get the latest tips and tricks for getting the most out of your favorite browser.
+
+
+;Firefox Mobile
+Firefox Mobile
+
+
+;Learn about the hottest new add-ons and features for Firefox mobile.
+Learn about the hottest new add-ons and features for Firefox mobile.
+
+
+;Beta News
+Beta News
+
+
+;Read about the latest features for Firefox desktop and mobile before the final release.
+Read about the latest features for Firefox desktop and mobile before the final release.
 
 
