--- a/hu/newsletter.lang
+++ b/hu/newsletter.lang
@@ -49,8 +49,10 @@ Alig várjuk, hogy elkezdhessünk küldeni a Firefox böngészővel kapcsolatos 
 ;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
 Iratkozzon fel a havonta megjelenő hírlevélre, amelyben a Mozilla-híreken túl, a Firefox használatával kapcsolatos tippeket és trükköket is tartalmaz. Ez a legjobb módja annak, hogy tartsuk a kapcsolatot!
 
+
 ;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
-Elküldtük e-mailben a visszaigazoló üzenetet. Kattintson a levélben található hivatkozásra a levelezőlistára történő feliratkozás megerősítéshez. 
+Elküldtük e-mailben a visszaigazoló üzenetet. Kattintson a levélben található hivatkozásra a levelezőlistára történő feliratkozás megerősítéshez.
+
 
 ;Read all about it in our <span>newsletter</span>
 Olvasson minderről a <span>hírlevelünkben</span>
@@ -58,5 +60,41 @@ Olvasson minderről a <span>hírlevelünkben</span>
 
 ;Format
 Formátum
+
+
+;You’re All Set! <span>But Wait, There’s More</span>
+You’re All Set! <span>But Wait, There’s More</span>
+
+
+;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+
+
+;Firefox & You
+Firefox & You
+
+
+;Our Other Newsletters:
+Our Other Newsletters:
+
+
+;Get the latest tips and tricks for getting the most out of your favorite browser.
+Get the latest tips and tricks for getting the most out of your favorite browser.
+
+
+;Firefox Mobile
+Firefox Mobile
+
+
+;Learn about the hottest new add-ons and features for Firefox mobile.
+Learn about the hottest new add-ons and features for Firefox mobile.
+
+
+;Beta News
+Beta News
+
+
+;Read about the latest features for Firefox desktop and mobile before the final release.
+Read about the latest features for Firefox desktop and mobile before the final release.
 
 
