--- a/lij/newsletter.lang
+++ b/lij/newsletter.lang
@@ -46,7 +46,6 @@ Gràçie de l'iscriçión!
 Niâtri amiêmo de lóngo in avànti e te faiêmo savéi mastrùssi pe pigiâ o màscimo da Firefox, te diêmo novitæ in sciô Mozilla che són de vêe lecàie e in ciù te informiêmo cómme louâmo pe rénde o Web mêgio de cómme o l'é.
 
 
-
 ;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
 Abon-ite a i agiornaménti do meìze e stànni de lóngo a-o corénte co-e notìçie de Mozilla, ti poriæ lêze i ùrtimi conséggi e mastrùssi pe pigiâ o mêgio dò-u teu navegatô Firefox. L'é o mòddo perfétto pe tegnîse in contàtto!
 
@@ -61,5 +60,41 @@ Lêzi tùtto quéllo che t'eu savéi in sciâ nòstra <span>newsletter</span>
 
 ;Format
 Formâto
+
+
+;You’re All Set! <span>But Wait, There’s More</span>
+You’re All Set! <span>But Wait, There’s More</span>
+
+
+;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+
+
+;Firefox & You
+Firefox & You
+
+
+;Our Other Newsletters:
+Our Other Newsletters:
+
+
+;Get the latest tips and tricks for getting the most out of your favorite browser.
+Get the latest tips and tricks for getting the most out of your favorite browser.
+
+
+;Firefox Mobile
+Firefox Mobile
+
+
+;Learn about the hottest new add-ons and features for Firefox mobile.
+Learn about the hottest new add-ons and features for Firefox mobile.
+
+
+;Beta News
+Beta News
+
+
+;Read about the latest features for Firefox desktop and mobile before the final release.
+Read about the latest features for Firefox desktop and mobile before the final release.
 
 
