--- a/mr/newsletter.lang
+++ b/mr/newsletter.lang
@@ -47,7 +47,7 @@
 
 
 ;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
-मासिक सुधारणांसाठी सबस्क्राइब करा व Mozilla न्यूजसह अवगत रहा, फायरफॉक्स ब्राऊजरपासून सर्वाधिक प्राप्त करण्यासाठी नविन टिप्स् व युक्ती समाविष्टीत. आमच्याशी संपर्कात राहण्यासाठी उत्तम मार्ग!　  
+मासिक सुधारणांसाठी सबस्क्राइब करा व Mozilla न्यूजसह अवगत रहा, फायरफॉक्स ब्राऊजरपासून सर्वाधिक प्राप्त करण्यासाठी नविन टिप्स् व युक्ती समाविष्टीत. आमच्याशी संपर्कात राहण्यासाठी उत्तम मार्ग!　
 
 
 ;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
@@ -60,5 +60,41 @@
 
 ;Format
 रूपण
+
+
+;You’re All Set! <span>But Wait, There’s More</span>
+You’re All Set! <span>But Wait, There’s More</span>
+
+
+;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+
+
+;Firefox & You
+Firefox & You
+
+
+;Our Other Newsletters:
+Our Other Newsletters:
+
+
+;Get the latest tips and tricks for getting the most out of your favorite browser.
+Get the latest tips and tricks for getting the most out of your favorite browser.
+
+
+;Firefox Mobile
+Firefox Mobile
+
+
+;Learn about the hottest new add-ons and features for Firefox mobile.
+Learn about the hottest new add-ons and features for Firefox mobile.
+
+
+;Beta News
+Beta News
+
+
+;Read about the latest features for Firefox desktop and mobile before the final release.
+Read about the latest features for Firefox desktop and mobile before the final release.
 
 
