--- a/de/newsletter.lang
+++ b/de/newsletter.lang
@@ -62,5 +62,39 @@ Erfahren Sie mehr mit dem <span>Mozilla-Newsletter</span>
 Format {ok}
 
 
-;Your newsletter subscription has been confirmed.
-Vielen Dank, dass Sie sich für "Firefox & Du" angemeldet haben. Ihre Anmeldung ist damit abgeschlossen.
+;You’re All Set! <span>But Wait, There’s More</span>
+You’re All Set! <span>But Wait, There’s More</span>
+
+
+;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+
+
+;Firefox & You
+Firefox & You
+
+
+;Our Other Newsletters:
+Our Other Newsletters:
+
+
+;Get the latest tips and tricks for getting the most out of your favorite browser.
+Get the latest tips and tricks for getting the most out of your favorite browser.
+
+
+;Firefox Mobile
+Firefox Mobile
+
+
+;Learn about the hottest new add-ons and features for Firefox mobile.
+Learn about the hottest new add-ons and features for Firefox mobile.
+
+
+;Beta News
+Beta News
+
+
+;Read about the latest features for Firefox desktop and mobile before the final release.
+Read about the latest features for Firefox desktop and mobile before the final release.
+
+
