--- a/en-GB/newsletter.lang
+++ b/en-GB/newsletter.lang
@@ -56,5 +56,37 @@ We just sent you a confirmation message by email. Click on the confirmation link
 Read all about it in our <span>newsletter</span>
 
 
+;Your newsletter subscription has been confirmed.
+Your newsletter subscription has been confirmed.
+
 ;Format
 Format
+
+;You’re All Set! <span>But Wait, There’s More</span>
+You’re All Set! <span>But Wait, There’s More</span>
+
+
+;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+
+;Firefox & You
+Firefox & You
+
+;Our Other Newsletters:
+Our Other Newsletters:
+
+;Get the latest tips and tricks for getting the most out of your favorite browser.
+Get the latest tips and tricks for getting the most out of your favorite browser.
+
+;Firefox Mobile
+Firefox Mobile
+
+;Learn about the hottest new add-ons and features for Firefox mobile.
+Learn about the hottest new add-ons and features for Firefox mobile.
+
+;Beta News
+Beta News
+
+;Read about the latest features for Firefox desktop and mobile before the final release.
+Read about the latest features for Firefox desktop and mobile before the final release.
+
