Added new German strings
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@102923 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/de/newsletter.lang
+++ b/de/newsletter.lang
@@ -58,28 +58,32 @@ Wir haben Ihnen gerade eine E-Mail zur Bestätigung geschickt. Klicken Sie auf d
 Erfahren Sie mehr mit dem <span>Mozilla-Newsletter</span>
 
 
+;Your newsletter subscription has been confirmed.
+Ihr Newsletter-Abonnement wurde bestätigt.
+
+
 ;Format
 Format {ok}
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+Sie sind startklar! <span>Aber halt, es gibt noch mehr</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Möchten Sie die wichtigsten Informationen erhalten? Erzählen Sie uns ein bisschen von Ihnen. Und wenn Sie schon da sind, melden Sie sich für andere Mozilla-Nachrichten an.
 
 
 ;Firefox & You
-Firefox & You
+Firefox & Du
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Unsere anderen Newsletter:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Holen Sie sich die neuesten Tipps und Tricks, um das meiste aus Ihrem Lieblingsbrowser herauszuholen.
 
 
 ;Firefox Mobile
@@ -87,14 +91,14 @@ Firefox Mobile
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Erfahren Sie etwas über die heißesten neuen Add-ons und Funktionen für Firefox Mobile.
 
 
 ;Beta News
-Beta News
+Beta-Nachrichten
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Lesen Sie vor der endgültigen Veröffentlichung etwas über die neuesten Funktionen für Firefox für Desktops und Mobilgeräte.
 
 
