Added {ok} tag for German newsletter.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@102924 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/de/newsletter.lang
+++ b/de/newsletter.lang
@@ -87,7 +87,7 @@ Holen Sie sich die neuesten Tipps und Tricks, um das meiste aus Ihrem Lieblingsb
 
 
 ;Firefox Mobile
-Firefox Mobile
+Firefox Mobile {ok}
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
