el (Greek) translation for the latest strings in newsletter.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@102940 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/el/newsletter.lang
+++ b/el/newsletter.lang
@@ -63,38 +63,41 @@
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+Είστε έτοιμοι! <span>Αλλά υπάρχουν κι άλλα!</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Θέλετε να έχετε ακριβείς πληροφορίες για όσα σας ενδιαφέρουν; Πείτε μας μερικά πράγματα για εσάς. Κι αφού είστε εδώ, γραφτείτε συνδρομητές και σε άλλα δελτία νέων του Mozilla.
 
 
 ;Firefox & You
-Firefox & You
+Ο Firefox & εσείς
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Τα άλλα δελτία νέων μας:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Δείτε τις πιο νέες συμβουλές και τα κόλπα για να εκμεταλλευτείτε στο έπακρο τον αγαπημένο σας περιηγητή.
 
 
 ;Firefox Mobile
-Firefox Mobile
+Firefox για κινητά
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Μάθετε για τα πιο «καυτά» νέα πρόσθετα και χαρακτηριστικά του Firefox για κινητά.
 
 
 ;Beta News
-Beta News
+Νέα για την έκδοση Beta
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Διαβάστε για τα νεότερα χαρακτηριστικά του Firefox σε υπολογιστές και κινητά πριν τη διάθεση της σταθερής έκδοσης.
+
+;Your newsletter subscription has been confirmed.
+Η συνδρομή σας επιβεβαιώθηκε.
 
 
