--- a/fr/newsletter.lang
+++ b/fr/newsletter.lang
@@ -58,6 +58,10 @@ Vérifiez dans votre boîte de réception si vous avez bien reçu le message de 
 Découvrez notre <span>lettre d'informations</span>
 
 
+;Your newsletter subscription has been confirmed.
+Votre abonnement à notre lettre d'informations a été confirmé.
+
+
 ;Format
 Format {ok}
 
@@ -67,7 +71,7 @@ Vous voilà paré&nbsp;! <span>Mais ce n'est pas tout&nbsp;!</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Vous voulez obtenir les informations les plus pertinentes&nbsp;? Dites-nous en un peu plus sur vous. Et puisque vous êtes là, profitez-en pour vous abonner à d'autres nouvelles sur Mozilla.
 
 
 ;Firefox & You
