--- a/lij/newsletter.lang
+++ b/lij/newsletter.lang
@@ -63,23 +63,23 @@ Formâto
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+Òua sci che ghe sémmo! <span>Ma aspêta, Ghe n'é ancón</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+T'eu savéi e informaçioìn ciù rilevànti? Dìnni a niâtri quarcösa de ti. E fintànto che t'ê chi, abón-ite a-e âtre notìçie do Mozilla.
 
 
 ;Firefox & You
-Firefox & You
+Firefox & Ti
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+E nòstre âtre Newsletter:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Pìggite i trùcchi e mastrùssi pe tiâ fêua o mêgio dò-u teu navegatô preferîo.
 
 
 ;Firefox Mobile
@@ -87,14 +87,14 @@ Firefox Mobile
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Inpâra in sci nêuvi conponénti azónti e carateristìche ciù câde do Firefox mobile.
 
 
 ;Beta News
-Beta News
+Notìçie do Beta
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Lêzi de l'ùrtime carateristìche do Firefox pe computer e telefonìn prìmma che sciòrta a versción finâle.
 
 
