l10n: fa, Updated newsletter.lang translations
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103006 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/fa/newsletter.lang
+++ b/fa/newsletter.lang
@@ -63,38 +63,38 @@
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+شما دیگر آماده هستید! <span>اما صبر کنید، هنوز بیشتره</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+می‌خواهید بیشترین اطلاعات مرتبط را دریافت کنید؟ کمی بیشتر دربارهٔ خود به ما بگویید. و حالا که اینجا هستید، برای اخبارهای دیگر موزیلا ثبت‌نام کنید.
 
 
 ;Firefox & You
-Firefox & You
+فایرفاکس و شما
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+خبرنامهٔ دیگر ما:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+آخرین راهنمایی‌ها و ترفندها برای استفاده هر چه بیشتر از مرورگر محبوب خود را دریافت کنید.
 
 
 ;Firefox Mobile
-Firefox Mobile
+فایرفاکس تلفن‌همراه
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+دربارهٔ داغ‌ترین و جدیدترین افزونه‌ها و امکانات فایرفاکس برای تلفن‌همراه اطلاع پیدا کنید.
 
 
 ;Beta News
-Beta News
+اخبار نسخه‌های آزمایشی
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+دربارهٔ آخرین امکانات فایرفاکسِ رومیزی و تلفن‌همراه قبل از انتشار نهایی بخوانید.
 
 
