l10n:lij add to newsletter.lang missing 1 fraze
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103008 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/lij/newsletter.lang
+++ b/lij/newsletter.lang
@@ -97,4 +97,5 @@ Notìçie do Beta
 ;Read about the latest features for Firefox desktop and mobile before the final release.
 Lêzi de l'ùrtime carateristìche do Firefox pe computer e telefonìn prìmma che sciòrta a versción finâle.
 
-
+;Your newsletter subscription has been confirmed.
+A teu iscriçión a-a newsletter a l'é stæta confermâ.
