Translated newsletter strings
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103011 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/is/newsletter.lang
+++ b/is/newsletter.lang
@@ -63,38 +63,36 @@ Sniðmát
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+Allt er tilbúið! <span>En bíddu aðeins, það er til meira</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Viltu fá áhugaverðustu fréttirnar? Segðu okkur aðeins meira frá þér. Og á meðan þú ert hérna, skráðu þig endilega fyrir öðrum Mozilla fréttum.
 
 
 ;Firefox & You
-Firefox & You
+Firefox og þú
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Önnur fréttabréf:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Fáðu nýjustu ábendingarnar og snjallræðin þannig að þú fáir sem mest út úr uppáhalds vafranum þínum.
 
 
 ;Firefox Mobile
-Firefox Mobile
+Firefox fyrir farsíma
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Lestu um nýjustu viðbæturnar og eiginleikana fyrir Firefox fyrir farsíma.
 
 
 ;Beta News
-Beta News
+Beta fréttir
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
-
-
+Lestu um nýjustu hlutina fyrir Firefox á tölvu og farsíma áður en lokaútgáfan er gerð.
