--- a/is/newsletter.lang
+++ b/is/newsletter.lang
@@ -58,6 +58,10 @@ Búið er að senda þér staðfestingarpóst. Smelltu á tengilinn í staðfest
 Lestu allt um þetta í <span>fréttablaðinu</span> okkar
 
 
+;Your newsletter subscription has been confirmed.
+Búið er að staðfesta áskrift að fréttabréfinu.
+
+
 ;Format
 Sniðmát
 
