l10n: update newsletter.lang files for all locales
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103025 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/de/newsletter.lang
+++ b/de/newsletter.lang
@@ -1,3 +1,6 @@
+# These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/es-ES/newsletter/new
+
+
 ;Get Monthly News
 Erhalten Sie monatliche Neuigkeiten
 
@@ -59,7 +62,7 @@ Erfahren Sie mehr mit dem <span>Mozilla-Newsletter</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Ihr Newsletter-Abonnement wurde bestätigt.
+Your newsletter subscription has been confirmed.
 
 
 ;Format
@@ -100,5 +103,13 @@ Beta-Nachrichten
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
 Lesen Sie vor der endgültigen Veröffentlichung etwas über die neuesten Funktionen für Firefox für Desktops und Mobilgeräte.
+
+
+;Let’s Be Friends!
+Let’s Be Friends!
+
+
+;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
 
 
