--- a/fr/newsletter.lang
+++ b/fr/newsletter.lang
@@ -1,3 +1,6 @@
+# These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/es-ES/newsletter/new
+
+
 ;Get Monthly News
 Recevez notre lettre mensuelle
 
@@ -59,7 +62,7 @@ Découvrez notre <span>lettre d'informations</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Votre abonnement à notre lettre d'informations a été confirmé.
+Your newsletter subscription has been confirmed.
 
 
 ;Format
@@ -100,5 +103,13 @@ Journal des bêtas
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
 Découvrez toutes les nouveautés à venir de Firefox dans ses déclinaisons classque et mobile.
+
+
+;Let’s Be Friends!
+Let’s Be Friends!
+
+
+;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
 
 
