--- a/is/newsletter.lang
+++ b/is/newsletter.lang
@@ -1,3 +1,6 @@
+# These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/es-ES/newsletter/new
+
+
 ;Get Monthly News
 Fá fréttir mánaðarlega
 
@@ -59,7 +62,7 @@ Lestu allt um þetta í <span>fréttablaðinu</span> okkar
 
 
 ;Your newsletter subscription has been confirmed.
-Búið er að staðfesta áskrift að fréttabréfinu.
+Your newsletter subscription has been confirmed.
 
 
 ;Format
@@ -100,3 +103,13 @@ Beta fréttir
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
 Lestu um nýjustu hlutina fyrir Firefox á tölvu og farsíma áður en lokaútgáfan er gerð.
+
+
+;Let’s Be Friends!
+Let’s Be Friends!
+
+
+;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+
+
