--- a/ca/newsletter.lang
+++ b/ca/newsletter.lang
@@ -1,3 +1,6 @@
+# These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/es-ES/newsletter/new
+
+
 ;Get Monthly News
 Obteniu novetats mensualment
 
@@ -58,6 +61,10 @@ Us enviem un missatge de confirmació per correu electrònic. Feu clic a l'enlla
 Llegiu-ho tot al nostre <span>butlletí</span>
 
 
+;Your newsletter subscription has been confirmed.
+Your newsletter subscription has been confirmed.
+
+
 ;Format
 Format {ok}
 
@@ -96,5 +103,13 @@ Beta News
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
 Read about the latest features for Firefox desktop and mobile before the final release.
+
+
+;Let’s Be Friends!
+Let’s Be Friends!
+
+
+;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
 
 
