--- a/el/newsletter.lang
+++ b/el/newsletter.lang
@@ -1,3 +1,6 @@
+# These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/es-ES/newsletter/new
+
+
 ;Get Monthly News
 Λάβετε το μηνιαίο δελτίο νέων μας
 
@@ -58,6 +61,10 @@
 Διαβάστε περισσότερα στο <span>δελτίο νέων</span> μας.
 
 
+;Your newsletter subscription has been confirmed.
+Your newsletter subscription has been confirmed.
+
+
 ;Format
 Μορφή
 
@@ -97,7 +104,12 @@ Firefox για κινητά
 ;Read about the latest features for Firefox desktop and mobile before the final release.
 Διαβάστε για τα νεότερα χαρακτηριστικά του Firefox σε υπολογιστές και κινητά πριν τη διάθεση της σταθερής έκδοσης.
 
-;Your newsletter subscription has been confirmed.
-Η συνδρομή σας επιβεβαιώθηκε.
+
+;Let’s Be Friends!
+Let’s Be Friends!
+
+
+;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
 
 
