--- a/fa/newsletter.lang
+++ b/fa/newsletter.lang
@@ -1,3 +1,6 @@
+# These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/es-ES/newsletter/new
+
+
 ;Get Monthly News
 دریافت اخبار ماهیانه
 
@@ -58,6 +61,10 @@
 همه‌چیز را در این باره در <span>خبرنامه</span> بخوانید
 
 
+;Your newsletter subscription has been confirmed.
+Your newsletter subscription has been confirmed.
+
+
 ;Format
 قالب
 
@@ -96,5 +103,13 @@
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
 دربارهٔ آخرین امکانات فایرفاکسِ رومیزی و تلفن‌همراه قبل از انتشار نهایی بخوانید.
+
+
+;Let’s Be Friends!
+Let’s Be Friends!
+
+
+;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
 
 
