--- a/km/newsletter.lang
+++ b/km/newsletter.lang
@@ -1,3 +1,6 @@
+# These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/es-ES/newsletter/new
+
+
 ;Get Monthly News
 យក​ព័ត៌មាន​ប្រចាំ​ខែ
 
@@ -58,6 +61,10 @@
 អាន​វា​ទាំងអស់​នៅ​ក្នុង​ទ្រង់ទ្រាយ <span>ព្រឹត្តិបត្តិ​ព័ត៌មាន</span>
 
 
+;Your newsletter subscription has been confirmed.
+Your newsletter subscription has been confirmed.
+
+
 ;Format
 របស់​អ្នក
 
@@ -96,5 +103,13 @@ Beta News
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
 Read about the latest features for Firefox desktop and mobile before the final release.
+
+
+;Let’s Be Friends!
+Let’s Be Friends!
+
+
+;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
 
 
