--- a/ko/newsletter.lang
+++ b/ko/newsletter.lang
@@ -1,3 +1,6 @@
+# These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/es-ES/newsletter/new
+
+
 ;Get Monthly News
 월간 뉴스레터 받기
 
@@ -58,6 +61,10 @@ Mozilla에 관한 소식을 매월 보내 드립니다. Firefox 웹 브라우저
 <span>뉴스레터</span>에서 모두 읽기
 
 
+;Your newsletter subscription has been confirmed.
+Your newsletter subscription has been confirmed.
+
+
 ;Format
 형식
 
@@ -96,5 +103,13 @@ Beta News
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
 Read about the latest features for Firefox desktop and mobile before the final release.
+
+
+;Let’s Be Friends!
+Let’s Be Friends!
+
+
+;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
 
 
