--- a/lij/newsletter.lang
+++ b/lij/newsletter.lang
@@ -1,3 +1,6 @@
+# These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/es-ES/newsletter/new
+
+
 ;Get Monthly News
 Pìggia a notìçia do méize
 
@@ -58,6 +61,10 @@ Niâtri t'émmo apénn-a mandòu 'na mail de confèrma. Sciàcca o colegaménto 
 Lêzi tùtto quéllo che t'eu savéi in sciâ nòstra <span>newsletter</span>
 
 
+;Your newsletter subscription has been confirmed.
+Your newsletter subscription has been confirmed.
+
+
 ;Format
 Formâto
 
@@ -97,5 +104,12 @@ Notìçie do Beta
 ;Read about the latest features for Firefox desktop and mobile before the final release.
 Lêzi de l'ùrtime carateristìche do Firefox pe computer e telefonìn prìmma che sciòrta a versción finâle.
 
-;Your newsletter subscription has been confirmed.
-A teu iscriçión a-a newsletter a l'é stæta confermâ.
+
+;Let’s Be Friends!
+Let’s Be Friends!
+
+
+;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+
+
