--- a/eo/newsletter.lang
+++ b/eo/newsletter.lang
@@ -62,7 +62,7 @@ Legu ĉion pri tio en nia <span>novaĵletero</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+Via abono al la novaĵletero estis konfirmita.
 
 
 ;Format
@@ -70,46 +70,46 @@ Formo
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+Vi pretas! <span>Sed atendu, tio ne estas ĉio</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Ĉu vi volas ricevi la plej aktualajn informojn?  Rakontu al ni iomete pri vi, kaj profitu vian viziton por aboni aliajn novaĵleterojn de Mozilla.
 
 
 ;Firefox & You
-Firefox & You
+Firefox kaj vi
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Niaj aliaj novaĵleteroj:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Ricevu la lastajn konsilojn kaj trukojn por eltiri la maksimumon el via plej ŝatata retesplorilo.
 
 
 ;Firefox Mobile
-Firefox Mobile
+Firefox por poŝtelefonoj
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Lerni pri la plej lastaj aldonaĵoj kaj trajtoj en Firefox por poŝtelefonoj.
 
 
 ;Beta News
-Beta News
+Novaĵoj pri Beta
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Legi pri la lastaj trajtoj de Firefoĉ por komputiloj kaj poŝtelefonoj antaŭ la fina eldono.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Ni amikiĝu!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox troveblas ankaŭ en viaj plej ŝatataj sociaj retejoj.  Kontaktu nin kaj aliĝu al la babilado.
 
 
