New German strings for newsletter.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103027 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/de/newsletter.lang
+++ b/de/newsletter.lang
@@ -62,7 +62,7 @@ Erfahren Sie mehr mit dem <span>Mozilla-Newsletter</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+Ihr Newsletter-Abonnement wurde bestätigt.
 
 
 ;Format
@@ -106,10 +106,10 @@ Lesen Sie vor der endgültigen Veröffentlichung etwas über die neuesten Funkti
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Lass’ uns Freunde sein!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox ist auch auf Ihren sozialen Lieblingsnetzwerken. Setzen Sie sich mit uns in Verbindung und diskutieren Sie mit.
 
 
