l10n:lij language fix
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103029 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/lij/download.lang
+++ b/lij/download.lang
@@ -1,5 +1,5 @@
 ;Mozilla Firefox, free web browser, is created by a global non-profit dedicated to putting individuals in control & shaping the future of the web for the public good.
-Mozilla Firefox, o navegatô de bàdda, o l'é creòu da 'na asociaçión sénsa fìn de goâgno e métte e scìngole personn-e a-o prìmmo pòsto e dizégna l'avegnî do web cómme bén pùblico
+Mozilla Firefox, o navegatô de bàdda, o l'é creòu da 'na asociaçión sénsa fìn de goâgno ch'a métte e scìngole personn-e a-o prìmmo pòsto e in ciù a dizégna l'avegnî do web cómme bén pùblico
 
 
 ;Different by Design
