--- a/gl/newsletter.lang
+++ b/gl/newsletter.lang
@@ -1,4 +1,4 @@
-# These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/es-ES/newsletter/new
+ # These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/es-ES/newsletter/new
 
 
 ;Get Monthly News
@@ -50,66 +50,66 @@ Moi pronto enviarémoslle trucos e consellos para sacar o máximo proveito de Fi
 
 
 ;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
-Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
+Subscríbase ás actualizacións mensuais e mantéñase ao corrente das novas de Mozilla, incluíndo os últimos consellos e trucos para sacar o máximo proveito do seu navegador Firefox. É a mellor forma de manternos en contacto!
 
 
 ;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
-We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
+Só lle enviaremos unha mensaxe de confirmación ao correo. Prema na ligazón de confirmación deste correo para validar a súa subscrición a esta rolda de correo.
 
 
 ;Read all about it in our <span>newsletter</span>
-Read all about it in our <span>newsletter</span>
+Léao todo no noso <span>boletín de información</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+Confirmouse a súa subscrición ao boletín de información.
 
 
 ;Format
-Format
+Formato
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+Xa está todo configurado! <span>Pero agarde, aínda hai máis</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Desexa recibir a información máis relevante? Contenos un pouco máis sobre vostede. E mentres está aquí, rexístrese noutras novas de Mozilla.
 
 
 ;Firefox & You
-Firefox & You
+Firefox e vostede
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Outros boletíns de información:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Obteña os últimos consellos e trucos para sacar o máximo proveito do seu navegador favorito.
 
 
 ;Firefox Mobile
-Firefox Mobile
+Firefox Mobile {ok}
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Obteña máis información sobre os novos complementos máis populares e as características do Firefox mobile.
 
 
 ;Beta News
-Beta News
+Novas da beta
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Lea sobre as últimas características para o Firefox do escritorio e o móbil antes da versión final.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Sexamos amigos!
 
 
-;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+;Firefox is also on your favorite social networking sites. Connect with us and join the conversation
+Firefox tamén está nas súas redes sociais favoritas. Conecte connosco e únase a conversación
 
 
