l10n:lij language fix newsletter.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103033 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/lij/newsletter.lang
+++ b/lij/newsletter.lang
@@ -62,7 +62,7 @@ Lêzi tùtto quéllo che t'eu savéi in sciâ nòstra <span>newsletter</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+A teu iscriçión a-a newsletter a l'é stæte confermâ.
 
 
 ;Format
@@ -90,7 +90,7 @@ Pìggite i trùcchi e mastrùssi pe tiâ fêua o mêgio dò-u teu navegatô pref
 
 
 ;Firefox Mobile
-Firefox Mobile
+Firefox pe Telefonìn
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
@@ -106,10 +106,10 @@ Lêzi de l'ùrtime carateristìche do Firefox pe computer e telefonìn prìmma c
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Deventémmo Amîxi!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+O Firefox o l'é ascì o nòstro scîto de social network. Conétite con niâtri e unìscite a-a conversaçión.
 
 
